--- a/blog-client/public/assets/css/app.css
+++ b/blog-client/public/assets/css/app.css
@@ -223,6 +223,8 @@ span {
     margin-left: 5px;
 }
 
+/* USERS */
+
 .users .row.headers {
 	background: #343a40;
 	border-bottom: none;
@@ -259,4 +261,45 @@ span {
 
 .users .row .cell .btn {
 	float: right;
+}
+
+/* USERS - EDIT */
+
+.user-edit form {
+	background: #f6f6f6;
+    padding: 30px;
+    border: 1px solid #e9e9e9;
+    border-radius: 3px;
+}
+
+.user-edit form .row {
+	display: flex;
+	align-items: center;
+	margin-bottom: 20px;
+}
+
+.user-edit form .row:last-child {
+	margin-bottom: 0;
+}
+
+.user-edit form .row label {
+	min-width: 15%;
+	padding: 0px 10px;
+	text-align: right;
+}
+
+.user-edit form .row input {
+	width: calc(100% - 15px);
+	height: 42px;
+	padding: 5px 15px;
+	border: 1px solid #e9e9e9;
+	border-radius: 3px;
+}
+
+.user-edit form .row input[type="checkbox"] {
+	width: unset;
+}
+
+.user-edit .btn.btn-dash-primary {
+	margin-left: auto;
 }
