--- a/blog-client/public/assets/css/app.css
+++ b/blog-client/public/assets/css/app.css
@@ -273,11 +273,19 @@ span {
 	color: #fff;
 }
 
+.users {
+	padding: 30px 30px;
+    background: #f6f6f6;
+    border: 1px solid #e9e9e9;
+    border-radius: 3px;
+}
+
 .users .row {
 	display: flex;
     align-items: center;
     justify-content: space-between;
 	border-bottom: 1px solid #ccc;
+	background: #fff;
 }
 
 .users .row:hover {
@@ -286,7 +294,7 @@ span {
 
 .users .row .cell {
 	width: 100%;
-	padding: 5px 15px; 
+	padding: 10px 15px; 
 }
 
 .users .row .cell .btn {
