--- a/blog-client/public/assets/css/app.css
+++ b/blog-client/public/assets/css/app.css
@@ -38,6 +38,11 @@ span {
 	font-size: 14px;
 }
 
+input,
+select {
+	outline: none;
+}
+
 .small {
 	font-size: 12px;
 	color: #a5a5a5;
@@ -79,8 +84,9 @@ span {
 	cursor: pointer;
 	border: none;
 	text-decoration: none;
+	min-width: 90px;
+	text-align: center;
 }
-
 
 .btn:hover {
 	opacity: .8;
@@ -103,6 +109,64 @@ span {
 
 .hide-font {
 	font-size: 0;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, .5);
+    z-index: 1;
+}
+
+.popup-model {
+	position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9;
+    background: #fff;
+    border-radius: 3px;
+	min-width: 678px;
+}
+
+.popup-model .title {
+	padding: 15px;
+    background: #f6f6f6;
+	margin-bottom: 0 !important;
+}
+
+.popup-model .title .close {
+	font-size: 20px;
+    line-height: 20px;
+    width: 20px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.popup-model .content {
+	padding: 0px 15px 15px 15px;
+}
+
+.popup-model .content input {
+    width: 100%;
+    height: 42px;
+    padding: 5px 15px;
+	border: 1px solid #e9e9e9;
+	border-radius: 3px;
+}
+
+.popup-model .content form {
+	display: flex;
+	padding: 0;
+    background: none;
+    border: none;
+}
+
+.popup-model .content form .btn.btn-dash-delete {
+	margin-left: 5px;
 }
 
 
