--- a/blog-client/public/assets/css/app.css
+++ b/blog-client/public/assets/css/app.css
@@ -123,7 +123,7 @@ select {
 
 .popup-model {
 	position: fixed;
-    top: 50%;
+    top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 9;
@@ -321,6 +321,8 @@ select {
     font-size: 14px;
     letter-spacing: 0;
     margin-left: 5px;
+	min-width: 90px;
+	text-align: center;
 }
 
 /* USERS */
