--- a/blog-client/public/assets/css/app.css
+++ b/blog-client/public/assets/css/app.css
@@ -327,26 +327,39 @@ select {
 
 /* USERS */
 
-.users .row.headers {
-	background: #343a40;
-	border-bottom: none;
-}
-
-.users .row.headers:hover {
-	background: #343a40;
-}
-
-.users .row.headers .cell {
+.search {
 	padding: 15px;
+	background: #f6f6f6;
+    border: 1px solid #e9e9e9;
+    border-radius: 3px;
+	margin-bottom: 15px;
 }
 
-.row.headers .cell strong {
-	text-transform: uppercase;
-	color: #fff;
+.search form {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
+
+.btn.search-button {
+	background: #3c8dbc;
+    color: #fff;
+	margin-left: 5px;
+}
+
+.search form input {
+	width: 100%;
+    min-height: 38px;
+    background: #fff;
+    border: none;
+    border-radius: 3px;
+    padding: 5px 15px;
+}
+
+
 
 .users {
-	padding: 30px 30px;
+	padding: 15px;
     background: #f6f6f6;
     border: 1px solid #e9e9e9;
     border-radius: 3px;
@@ -367,6 +380,24 @@ select {
 .users .row .cell {
 	width: 100%;
 	padding: 10px 15px; 
+}
+
+.users .row.headers {
+	background: #343a40;
+	border-bottom: none;
+}
+
+.users .row.headers:hover {
+	background: #343a40;
+}
+
+.users .row.headers .cell {
+	padding: 15px;
+}
+
+.row.headers .cell strong {
+	text-transform: uppercase;
+	color: #fff;
 }
 
 .users .row .cell .btn {
