--- a/blog-client/public/assets/css/app.css
+++ b/blog-client/public/assets/css/app.css
@@ -86,6 +86,7 @@ select {
 	text-decoration: none;
 	min-width: 90px;
 	text-align: center;
+	border: 1px solid rgba(0, 0, 0, 0.1)
 }
 
 .btn:hover {
@@ -287,6 +288,13 @@ select {
 	padding: 5px 10px;
 }
 
+.registration-complete .btn {
+	float: left;
+    background: #000;
+    color: #fff;
+    margin-top: 8px;
+}
+
 
 /* DASHBOARD */
 
@@ -371,6 +379,10 @@ select {
     justify-content: space-between;
 	border-bottom: 1px solid #ccc;
 	background: #fff;
+}
+
+.users .row:nth-child(2n + 1) {
+	background: #f4f4f4;
 }
 
 .users .row:hover {
