--- a/blog-client/public/assets/css/app.css
+++ b/blog-client/public/assets/css/app.css
@@ -48,22 +48,27 @@ select {
 	color: #a5a5a5;
 }
 
+.success-message,
 .error-message {
-	color: #c55e5e;
-}
-
-.success-message {
 	display: flex;
 	align-items: center;
-	color: #3b803b;
     padding: 5px 10px;
-    background: #92d092;
     border-radius: 3px;
-    border: 1px solid #91c091;
 	justify-content: space-between;
 }
 
-.success-message span.close {
+.success-message {
+	background: #5eb95e;
+	color: #3b673b;
+}
+
+.error-message {
+	background: #c55e5e;
+	color: #703b3b;
+}
+
+.success-message span.close,
+.error-message span.close {
     display: inline-block;
     line-height: 18px;
     width: 20px;
@@ -72,6 +77,14 @@ select {
     border-radius: 30px;
     cursor: pointer;
     margin-left: 6px;
+}
+
+.success-message span.close {
+	border: 1px solid #3b803b;
+}
+
+.error-message span.close {
+	border: 1px solid #703b3b;
 }
 
 .btn {
@@ -420,32 +433,37 @@ select {
 	float: right;
 }
 
-/* USERS - EDIT */
+/* USERS - EDIT / CREATE */
 
-.user-edit form {
+.user-edit form,
+.create-user form {
 	background: #f6f6f6;
     padding: 30px;
     border: 1px solid #e9e9e9;
     border-radius: 3px;
 }
 
-.user-edit form .row {
+.user-edit form .row,
+.create-user form .row {
 	display: flex;
 	align-items: center;
 	margin-bottom: 20px;
 }
 
-.user-edit form .row:last-child {
+.user-edit form .row:last-child,
+.create-user form .row:last-child { 
 	margin-bottom: 0;
 }
 
-.user-edit form .row label {
+.user-edit form .row label,
+.create-user form .row label {
 	min-width: 15%;
 	padding: 0px 10px;
 	text-align: right;
 }
 
-.user-edit form .row input {
+.user-edit form .row input,
+.create-user form .row input {
 	width: calc(100% - 15px);
 	height: 42px;
 	padding: 5px 15px;
@@ -453,14 +471,17 @@ select {
 	border-radius: 3px;
 }
 
-.user-edit form .row input[type="checkbox"] {
+.user-edit form .row input[type="checkbox"],
+.create-user form .row input[type="checkbox"] {
 	width: unset;
 }
 
-.user-edit form .row:last-child {
+.user-edit form .row:last-child,
+.create-user form .row:last-child {
 	justify-content: right;
 }
 
-.user-edit form .row .btn {
+.user-edit form .row .btn,
+.create-user form .row .btn {
 	margin-left: 5px;
 }
