--- a/blog-client/public/assets/css/app.css
+++ b/blog-client/public/assets/css/app.css
@@ -283,6 +283,7 @@ select {
 .content-wrapper.register form .row,
 .content-wrapper.login form .row {
 	margin-bottom: 20px;
+	position: relative;
 }
 
 .content-wrapper.register form label,
@@ -306,6 +307,16 @@ select {
     background: #000;
     color: #fff;
     margin-top: 8px;
+}
+
+.content-wrapper.login .btn.view-password {
+	position: absolute;
+    bottom: 0;
+    right: 0;
+    min-width: unset;
+    border: none;
+    background: none;
+    line-height: 40px;
 }
 
 
