--- a/blog-client/public/assets/css/app.css
+++ b/blog-client/public/assets/css/app.css
@@ -309,7 +309,8 @@ select {
     margin-top: 8px;
 }
 
-.content-wrapper.login .btn.view-password {
+.content-wrapper.login .btn.view-password,
+.content-wrapper.register .btn.view-password {
 	position: absolute;
     bottom: 0;
     right: 0;
@@ -317,6 +318,10 @@ select {
     border: none;
     background: none;
     line-height: 40px;
+}
+
+.content-wrapper.register .btn.view-password {
+	bottom: 20px !important;
 }
 
 
