--- a/blog-client/public/assets/css/app.css
+++ b/blog-client/public/assets/css/app.css
@@ -189,10 +189,15 @@ select {
 .header {
 	background: #000;
 	max-height: 75px;
+	overflow: visible;
 }
 
 .header.dashboard {
 	background: #343a40;
+}
+
+.header .col {
+	overflow: visible;
 }
 
 .header .row {
@@ -200,6 +205,7 @@ select {
 	align-items: center;
 	justify-content: space-between;
 	padding: 7px 45px;
+	overflow: visible;
 }
 
 .logo a {
@@ -237,15 +243,22 @@ select {
 
 /* NAVIGATION */
 
+.navigation {
+	overflow: visible;
+}
+
 .navigation ul {
 	display: flex;
 	align-items: center;
 	padding: 0;
 	list-style: none;
+	overflow: visible;
 }
 
 .navigation ul li {
 	padding: 5px 10px;
+	position: relative;
+	overflow: visible;
 }
 
 .navigation ul li a {
@@ -253,6 +266,40 @@ select {
 	font-weight: 300;
 	color: #fff;
 	text-decoration: none;
+	position: relative;
+}
+
+.navigation ul li ul {
+	display: none;
+	position: absolute;
+	background-color: #fff;
+	z-index: 999;
+	border: 1px solid #000;
+	left: 0;
+	top: calc(100% - 1px);
+	min-width: 200px;
+}
+
+.navigation ul li ul li {
+	border-bottom: 1px solid #000;
+}
+
+.navigation ul li ul li:last-child {
+	border-bottom: none;
+}
+
+.navigation ul li ul a {
+	color: #000;
+}
+
+.navigation ul li:hover ul:hover,
+.navigation ul li:hover a ~ ul {
+	display: block;
+	max-width: 300px;
+}
+
+.navigation ul li a:hover ~ ul li {
+	width: 100%;
 }
 
 
