--- a/blog-client/public/assets/css/app.css
+++ b/blog-client/public/assets/css/app.css
@@ -269,36 +269,52 @@ select {
 	position: relative;
 }
 
-.navigation ul li ul {
+.navigation ul li .dropdown-wrapper {
 	display: none;
 	position: absolute;
-	background-color: #fff;
+	left: 10px;
+    top: calc(100% - 1px);
 	z-index: 999;
-	border: 1px solid #000;
-	left: 10;
-	top: calc(100% - 1px);
-	min-width: 200px;
+	padding-top: 5px;
+	overflow: visible;
+}
+
+.navigation ul li .dropdown-wrapper::before {
+    content: "";
+    display: block;
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    background: #252525;
+    border-radius: 3px;
+    top: 0px;
+    transform: rotate(45deg);
+    left: 13px;
+}
+
+.navigation ul li .dropdown-wrapper ul {
+    display: block;
+    background-color: #252525;
+    min-width: 200px;
+    border-radius: 3px;
 }
 
 .navigation ul li ul li {
-	border-bottom: 1px solid #000;
+	padding: 8px 15px;
+	border-bottom: 1px solid #464646;
 }
 
 .navigation ul li ul li:last-child {
 	border-bottom: none;
 }
 
-.navigation ul li ul a {
-	color: #000;
-}
-
 .navigation ul li:hover ul:hover,
-.navigation ul li:hover a ~ ul {
+.navigation ul li:hover a ~ .dropdown-wrapper {
 	display: block;
 	max-width: 300px;
 }
 
-.navigation ul li a:hover ~ ul li {
+.navigation ul li a:hover ~ .dropdown-wrapper li {
 	width: 100%;
 }
 
