Add css for button links

--- a/blog-client/public/assets/css/app.css
+++ b/blog-client/public/assets/css/app.css
@@ -121,6 +121,12 @@ select {
 	color: #fff;
 }
 
+a.btn-link {
+    color: #000;
+    text-decoration: none;
+    font-weight: bold;
+}
+
 .hide-font {
 	font-size: 0;
 }
