--- a/blog-client/public/assets/css/app.css
+++ b/blog-client/public/assets/css/app.css
@@ -15,6 +15,10 @@
 	overflow: hidden;
 }
 
+html {
+	overflow-y: auto;
+}
+
 body {
 	margin: 0;
 	font-family: 'Roboto', sans-serif;
@@ -639,4 +643,26 @@ a.btn-link {
     border: none;
     line-height: 42px;
     background: transparent;
+}
+
+/* TINYMCE */
+
+.tiny-mce-container {
+	width: 100%;
+}
+
+.tox-tinymce {
+	border: 1px solid #e9e9e9 !important;
+	border-radius: 3px !important;
+}
+
+.tox .tox-mbtn,
+.tox .tox-tbtn,
+.tox .tox-tbtn svg {
+	color: #343a40
+}
+
+.tox:not(.tox-tinymce-inline) .tox-editor-header {
+	border-bottom: 1px solid #e9e9e9 !important;
+	box-shadow: none !important;
 }
