--- a/blog-client/public/assets/css/app.css
+++ b/blog-client/public/assets/css/app.css
@@ -378,7 +378,8 @@ a.btn-link {
 .content-wrapper.login  form label {
 	display: block;
 	width: 100%;
-	margin-bottom: 5px
+	margin-bottom: 5px;
+	font-size: 14px;
 }
 
 .content-wrapper.register form input,
