--- a/blog-client/public/assets/css/app.css
+++ b/blog-client/public/assets/css/app.css
@@ -22,7 +22,6 @@ html {
 body {
 	margin: 0;
 	font-family: 'Roboto', sans-serif;
-	letter-spacing: 0.8px;
 }
 
 
@@ -116,7 +115,7 @@ select {
 }
 
 .btn.btn-dash-primary {
-	background: #3c8dbc;
+	background: #1a6680;
 	color: #fff;
 }
 
@@ -435,20 +434,21 @@ a.btn-link {
 
 .stat {
     padding: 15px;
-    background: #5f9978;
-    border: 1px solid #57896d;
+    background: #1a6680;
+    border: 1px solid #1e5365;
     border-radius: 3px;
 }
 
 .stat-title {
     margin-bottom: 15px;
-    border-bottom: 1px solid #4f8165;
+    border-bottom: 1px solid #155e76;
     padding-bottom: 18px;
 }
 
 .stat-title span {
 	display: block;
 	font-size: 18px;
+	font-weight: 300;
 	text-align: center;
 	color: #fff
 }
@@ -461,6 +461,7 @@ a.btn-link {
 }
 
 .content-wrapper.dashboard h1 {
+	font-size: 22px;
 	color: #343a40
 }
 
@@ -479,7 +480,7 @@ a.btn-link {
     border-radius: 3px;
     cursor: pointer;
     border: none;
-    background: green;
+    background: #459546;
     color: #fff;
     text-decoration: none;
     font-size: 14px;
@@ -506,7 +507,7 @@ a.btn-link {
 }
 
 .btn.search-button {
-	background: #3c8dbc;
+	background: #1a6680;
     color: #fff;
 	margin-left: 5px;
 }
@@ -535,12 +536,18 @@ a.btn-link {
 	display: flex;
     align-items: center;
     justify-content: space-between;
-	border-bottom: 1px solid #ccc;
+	border-bottom: 1px solid #e9e9e9;
+	border-left: 1px solid #e9e9e9;
+    border-right: 1px solid #e9e9e9;
 	background: #fff;
 }
 
 .users .row:nth-child(2n + 1) {
 	background: #f4f4f4;
+}
+
+.users .row:last-child {
+	border-radius: 0 0 3px 3px;
 }
 
 .users .row:hover {
@@ -554,7 +561,10 @@ a.btn-link {
 
 .users .row.headers {
 	background: #343a40;
+	border-radius: 3px 3px 0 0;
 	border-bottom: none;
+	border-left: none;
+	border-right: none;
 }
 
 .users .row.headers:hover {
