--- a/blog-client/public/assets/css/app.css
+++ b/blog-client/public/assets/css/app.css
@@ -12,7 +12,6 @@
 *::before,
 *::after {
 	box-sizing: border-box;
-	overflow: hidden;
 }
 
 html {
@@ -676,4 +675,27 @@ a.btn-link {
 .tox:not(.tox-tinymce-inline) .tox-editor-header {
 	border-bottom: 1px solid #e9e9e9 !important;
 	box-shadow: none !important;
+}
+
+.tox .tox-dialog--width-lg {
+	border-radius: 3px !important;
+}
+
+.tox .tox-dialog__body-content {
+	padding-top: 8px;
+}
+
+.tox .tox-button {
+	background: #1a6680 !important;
+	border: 1px solid #1a6680 !important;
+	font-weight: normal !important;
+	border-radius: 3px !important;
+}
+
+.tox .tox-button--secondary {
+	background: #f0f0f0 !important;
+}
+
+.tox .tox-button--naked {
+	background: transparent !important;
 }
