--- a/blog-client/public/assets/css/app.css
+++ b/blog-client/public/assets/css/app.css
@@ -524,14 +524,14 @@ a.btn-link {
     padding: 5px 15px;
 }
 
-.users {
+.table {
 	padding: 15px;
     background: #f6f6f6;
     border: 1px solid #e9e9e9;
     border-radius: 3px;
 }
 
-.users .row {
+.table .row {
 	display: flex;
     align-items: center;
     justify-content: space-between;
@@ -541,24 +541,24 @@ a.btn-link {
 	background: #fff;
 }
 
-.users .row:nth-child(2n + 1) {
+.table .row:nth-child(2n + 1) {
 	background: #f4f4f4;
 }
 
-.users .row:last-child {
+.table .row:last-child {
 	border-radius: 0 0 3px 3px;
 }
 
-.users .row:hover {
+.table .row:hover {
 	background: #f6f6f6;
 }
 
-.users .row .cell {
+.table .row .cell {
 	width: 100%;
 	padding: 10px 15px; 
 }
 
-.users .row.headers {
+.table .row.headers {
 	background: #343a40;
 	border-radius: 3px 3px 0 0;
 	border-bottom: none;
@@ -566,11 +566,11 @@ a.btn-link {
 	border-right: none;
 }
 
-.users .row.headers:hover {
+.table .row.headers:hover {
 	background: #343a40;
 }
 
-.users .row.headers .cell {
+.table .row.headers .cell {
 	padding: 15px;
 }
 
@@ -578,7 +578,7 @@ a.btn-link {
 	color: #fff;
 }
 
-.users .row .cell .btn {
+.table .row .cell .btn {
 	float: right;
 }
 
