--- a/blog-client/public/assets/css/app.css
+++ b/blog-client/public/assets/css/app.css
@@ -158,6 +158,7 @@ a.btn-link {
 	padding: 15px;
     background: #f6f6f6;
 	margin-bottom: 0 !important;
+	border-radius: 3px 3px 0 0;
 }
 
 .popup-model .title .close {
