--- a/blog-client/public/assets/css/app.css
+++ b/blog-client/public/assets/css/app.css
@@ -645,6 +645,20 @@ a.btn-link {
 	border-radius: 3px;
 }
 
+.user-edit form .row select,
+.create-user form .row select {
+	height: 42px;
+    width: 100%;
+    padding: 5px 42px 5px 10px;
+    border: 1px solid #e9e9e9;
+    border-radius: 3px;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    background: #fff url("data:image/svg+xml,<svg height='10px' width='10px' viewBox='0 0 16 16' fill='%23000000' xmlns='http://www.w3.org/2000/svg'><path d='M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z'/></svg>") no-repeat;
+    background-position: calc(100% - 17px);
+}
+
 .user-edit form .row input[type="checkbox"],
 .create-user form .row input[type="checkbox"] {
 	width: unset;
