--- a/blog-client/public/assets/css/app.css
+++ b/blog-client/public/assets/css/app.css
@@ -55,7 +55,7 @@ select {
 	display: flex;
 	align-items: center;
     padding: 5px 10px;
-    border-radius: 3px;
+    border-radius: 5px;
 	justify-content: space-between;
 }
 
@@ -95,7 +95,7 @@ select {
     line-height: 38px;
     padding: 0 15px;
     outline: none;
-	border-radius: 3px;
+	border-radius: 5px;
 	cursor: pointer;
 	border: none;
 	text-decoration: none;
@@ -106,6 +106,13 @@ select {
 
 .btn:hover {
 	opacity: .8;
+}
+
+.btn.small {
+	padding: 5px 10px;
+	min-width: unset;
+	line-height: 18px;
+	font-size: 12px;
 }
 
 .btn.btn-primary {
@@ -150,7 +157,7 @@ a.btn-link {
     transform: translate(-50%, -50%);
     z-index: 9;
     background: #fff;
-    border-radius: 3px;
+    border-radius: 5px;
 	min-width: 678px;
 }
 
@@ -178,7 +185,7 @@ a.btn-link {
     height: 42px;
     padding: 5px 15px;
 	border: 1px solid #e9e9e9;
-	border-radius: 3px;
+	border-radius: 5px;
 }
 
 .popup-model .content form {
@@ -295,7 +302,7 @@ a.btn-link {
     height: 15px;
     position: absolute;
     background: #252525;
-    border-radius: 3px;
+    border-radius: 5px;
     top: 0px;
     transform: rotate(45deg);
     left: 13px;
@@ -305,7 +312,7 @@ a.btn-link {
     display: block;
     background-color: #252525;
     min-width: 200px;
-    border-radius: 3px;
+    border-radius: 5px;
 }
 
 .navigation ul li ul li {
@@ -342,6 +349,13 @@ a.btn-link {
     justify-content: space-between;
 }
 
+.get-started {
+	padding: 5px 10px;
+	border-radius: 5px;
+	background: #fff;
+	color: #000 !important;
+}
+
 
 /* MAIN CONTENT */
 
@@ -362,6 +376,16 @@ a.btn-link {
 .content-wrapper.login > .row {
 	max-width: 660px;
 	margin: 35px auto;
+	overflow: hidden;
+}
+
+.content-wrapper.register > .row .form-wrapper,
+.content-wrapper.login > .row .form-wrapper {
+	margin-top: 45px;
+	padding: 15px 20px;
+	border-radius: 5px;
+	border: 1px solid #eee;
+	background: #fff;
 }
 
 .content-wrapper.register h1,
@@ -388,7 +412,7 @@ a.btn-link {
 	width: 100%;
 	height: 42px;
 	border: 1px solid #000;
-	border-radius: 3px;
+	border-radius: 5px;
 	padding: 5px 10px;
 }
 
@@ -438,7 +462,7 @@ a.btn-link {
     padding: 15px;
     background: #1a6680;
     border: 1px solid #1e5365;
-    border-radius: 3px;
+    border-radius: 5px;
 }
 
 .stat-title {
@@ -479,7 +503,7 @@ a.btn-link {
     line-height: 38px;
     padding: 0 15px;
     outline: none;
-    border-radius: 3px;
+    border-radius: 5px;
     cursor: pointer;
     border: none;
     background: #459546;
@@ -498,7 +522,7 @@ a.btn-link {
 	padding: 15px;
 	background: #f6f6f6;
     border: 1px solid #e9e9e9;
-    border-radius: 3px;
+    border-radius: 5px;
 	margin-bottom: 15px;
 }
 
@@ -529,7 +553,7 @@ a.btn-link {
     min-height: 38px;
     background: #fff;
     border: none;
-    border-radius: 3px;
+    border-radius: 5px;
     padding: 5px 15px;
 }
 
@@ -537,7 +561,7 @@ a.btn-link {
 	padding: 15px;
     background: #f6f6f6;
     border: 1px solid #e9e9e9;
-    border-radius: 3px;
+    border-radius: 5px;
 }
 
 .table .row {
@@ -611,7 +635,7 @@ a.btn-link {
 	background: #f6f6f6;
     padding: 30px;
     border: 1px solid #e9e9e9;
-    border-radius: 3px;
+    border-radius: 5px;
 }
 
 .user-edit form .row,
@@ -644,7 +668,7 @@ a.btn-link {
 	height: 42px;
 	padding: 5px 15px;
 	border: 1px solid #e9e9e9;
-	border-radius: 3px;
+	border-radius: 5px;
 }
 
 .user-edit form .row select,
@@ -653,7 +677,7 @@ a.btn-link {
     width: 100%;
     padding: 5px 42px 5px 10px;
     border: 1px solid #e9e9e9;
-    border-radius: 3px;
+    border-radius: 5px;
     -moz-appearance: none;
     -webkit-appearance: none;
     appearance: none;
@@ -742,15 +766,16 @@ a.btn-link {
 }
 
 .card {
-	width: calc(33.3333% - 10px);
+	width: calc(33.3333% - 14px);
     overflow: hidden;
     background: #fff;
     margin-bottom: 20px !important;
-	border-radius: 3px;
+	border-radius: 5px;
+	border: 1px solid #000;
 }
 
 .card:nth-child(3n-1) {
-    margin: 0px 15px;
+    margin: 0px 20px;
 }
 
 .card a {
@@ -783,15 +808,43 @@ a.btn-link {
 .card .content p {
 	min-height: 60px;
 	margin-bottom: 0;
-	color: #000;
+	color: #a0a0a0;
+}
+
+.card .content .extra-content {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .card .content .buttons-wrapper {
-	margin-top: 15px;
+	display: flex;
+	align-items: center;
 }
 
 .card .content .buttons-wrapper a {
-	font-size: 14px;
+	margin-right: 5px;
+}
+
+.card .content .buttons-wrapper a:last-child {
+	margin-right: 0;
+}
+
+.card .content .extra-content .created span {
+	font-size: 12px;
+	color: #bababa;
+}
+
+
+.card .read-later {
+	font-size: 0px;
+	line-height: 18px;
+    display: flex;
+    align-items: center;
+	border: 1px solid #000;
 	color: #000;
-	text-decoration: none;
+}
+
+.card .read-later svg {
+	font-size: 14px;
 }
