--- a/blog-client/public/assets/css/app.css
+++ b/blog-client/public/assets/css/app.css
@@ -793,6 +793,11 @@ a.btn-link {
     margin-bottom: 20px !important;
 	border-radius: 5px;
 	border: 1px solid #000;
+	transition: all ease-in-out .2s;
+}
+
+.card:hover {
+	transform: scale(1.02);
 }
 
 .card:nth-child(3n-1) {
