--- a/blog-client/public/assets/css/app.css
+++ b/blog-client/public/assets/css/app.css
@@ -982,7 +982,22 @@ a.btn-link {
 }
 
 .blog .banner {
+	position: relative;
 	margin-bottom: 22px;
+}
+
+.blog .categories {
+	position: absolute;
+	top: 10px;
+	left: 10px;
+}
+
+.blog .categories .category {
+	padding: 3px 5px;
+	background: #f6f6f6;
+	border: 1px solid #eee;
+	border-radius: 5px;
+	color: #454545;
 }
 
 .blog .banner img {
