--- a/blog-client/public/assets/css/app.css
+++ b/blog-client/public/assets/css/app.css
@@ -739,7 +739,8 @@ a.btn-link {
 .settings form,
 .user-edit form,
 .create-user form,
-.create-blog form {
+.create-blog form,
+.update-blog form {
 	background: #fff;
     padding: 30px;
     border: 1px solid #e9e9e9;
@@ -749,7 +750,8 @@ a.btn-link {
 .settings form .row,
 .user-edit form .row,
 .create-user form .row,
-.create-blog form .row {
+.create-blog form .row,
+.update-blog form .row {
 	display: flex;
 	align-items: center;
 	margin-bottom: 20px;
@@ -759,14 +761,16 @@ a.btn-link {
 .settings form .row:last-child,
 .user-edit form .row:last-child,
 .create-user form .row:last-child,
-.create-blog form .row:last-child { 
+.create-blog form .row:last-child,
+.update-blog form .row:last-child { 
 	margin-bottom: 0;
 }
 
 .settings form .row label,
 .user-edit form .row label,
 .create-user form .row label,
-.create-blog form .row label {
+.create-blog form .row label,
+.update-blog form .row label {
 	min-width: 15%;
 	padding: 0px 10px;
 	text-align: right;
@@ -775,7 +779,8 @@ a.btn-link {
 .settings form .row input,
 .user-edit form .row input,
 .create-user form .row input,
-.create-blog form .row input {
+.create-blog form .row input,
+.update-blog form .row input {
 	width: calc(100% - 15px);
 	height: 42px;
 	padding: 5px 15px;
@@ -785,7 +790,8 @@ a.btn-link {
 
 .settings form .row select,
 .user-edit form .row select,
-.create-user form .row select {
+.create-user form .row select,
+.update-blog form .row select {
 	height: 42px;
     width: 100%;
     padding: 5px 42px 5px 10px;
@@ -800,21 +806,24 @@ a.btn-link {
 
 .settings form .row input[type="checkbox"],
 .user-edit form .row input[type="checkbox"],
-.create-user form .row input[type="checkbox"] {
+.create-user form .row input[type="checkbox"],
+.update-blog form .row input[type="checkbox"] {
 	width: unset;
 }
 
 .settings form .row:last-child,
 .user-edit form .row:last-child,
 .create-user form .row:last-child,
-.create-blog form .row:last-child {
+.create-blog form .row:last-child,
+.update-blog form .row:last-child {
 	justify-content: right;
 }
 
 .settings form .row .btn,
 .user-edit form .row .btn,
 .create-user form .row .btn,
-.create-blog form .row .btn {
+.create-blog form .row .btn,
+.update-blog form .row .btn {
 	margin-left: 5px;
 }
 
