--- a/blog-client/public/assets/css/app.css
+++ b/blog-client/public/assets/css/app.css
@@ -157,7 +157,7 @@ a.btn-link {
 .popup-model {
 	position: fixed;
     top: 30%;
-    left: 50%;
+    left: calc(50% + 150);
     transform: translate(-50%, -50%);
     z-index: 9;
     background: #fff;
