--- a/blog-client/public/assets/css/app.css
+++ b/blog-client/public/assets/css/app.css
@@ -151,13 +151,13 @@ a.btn-link {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, .5);
-    z-index: 1;
+    z-index: 9;
 }
 
 .popup-model {
 	position: fixed;
     top: 30%;
-    left: calc(50% + 150);
+    left: calc(50% + 150px);
     transform: translate(-50%, -50%);
     z-index: 9;
     background: #fff;
